--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 html {
-    background-color: #cdd0d9;
+    background-color: #66CDAA;
 
 }
 .list {
  
-    background-color: #317731;
+    background-color: #C71585;
     height: 1000px;
     width: 800px;
     margin: 20px auto;
@@ -17,7 +17,7 @@ html {
 }
 .had {
     
-    background-color: #dee5e88f;
+    background-color: #008080f;
     height: 330px;
     width: 706px;
     margin: 10px;
@@ -25,7 +25,7 @@ html {
 
     box-shadow: 0px 0px 15px #4ead47;
 
-    border-color:#47ad4a7c;
+    border-color:#00FFFF;
     border-style: solid;
     border-width: 5px;
     border-radius: 5px;
