--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ html {
 
     font-family: candara;
     font-size: 35px;
-    color: #477947b4;
+    color: #DA70D6;
 }
 .description {
     height: 200px;
@@ -51,11 +51,11 @@ html {
     text-align: center;
     font-family: candara;
     font-size: 31px;
-    color: #d3d7d9;
+    color: #DA70D6;
 }
 .had img {
     margin-top: -220px;
-    border-color:#c0cacf97;
+    border-color:#DA70D6;
     border-style: solid;
     border-width: 5px;
     border-radius: 5px;
@@ -63,7 +63,7 @@ html {
 
 
 .info {
-    background-color: #dee5e88f;
+    background: #6495ED;
     height: 470px;
     width: 706px;
     margin: 10px;
@@ -71,7 +71,7 @@ html {
 
     box-shadow: 0px 0px 15px #47ad4f;
 
-    border-color:#47ad477c;
+    border-color: #6495ED;
     border-style: solid;
     border-width: 5px;
     border-radius: 5px;
