--- a/styles.css
+++ b/styles.css
@@ -93,8 +93,8 @@ html {
     margin-left: 60px;
 }
 .img_2 {
-    
-    margin: 300px 0px 140px 450px;
+    margin-top: 100px;
+    margin-left: 160px;
 }
 
 .basement {
