--- a/styles.css
+++ b/styles.css
@@ -93,8 +93,7 @@ html {
     margin-left: 60px;
 }
 .img_2 {
-    margin-top: 100px;
-    margin-left: 160px;
+    margin: -400px 0px 140px 450px;
 }
 
 .basement {
